# AmberClaw

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMMUNICATION.md  CONTRIBUTING.md  Dockerfile  LICENSE  MIGRATION.md  Makefile  README.md  SECURITY.md  core_agent_lines.sh  docker-compose.yml  mkdocs.yml  model_info.json  prompt.md  pyproject.toml  setup.py  suggestion.md
.amberclaw_old/: Dockerfile_old  bootstrap.sh  compose_old.yaml
.amberclaw_old/agent/: __init__.py  skills.py  subagent.py
.amberclaw_old/agent/tools/: filesystem.py  registry.py  skills.py
.amberclaw_old/channels/: email.py  matrix.py  mochat.py  qq.py
.amberclaw_old/cli/: __init__.py
.amberclaw_old/config/: __init__.py  loader.py  schema.py
.amberclaw_old/cron/: __init__.py
.amberclaw_old/heartbeat/: __init__.py
.amberclaw_old/memory/: graph_memory.py  memory_manager.py
.amberclaw_old/providers/: __init__.py  custom_provider.py  litellm_provider.py  openai_codex_provider.py
.amberclaw_old/session/: __init__.py  manager.py
.amberclaw_old/skills/clawhub/: SKILL.md
.amberclaw_old/skills/personal/: SKILL.md
.amberclaw_old/skills/tmux/: SKILL.md
.amberclaw_old/superpowers/: manager.py
.amberclaw_old/templates/: AGENTS.md
.amberclaw_old/templates/memory/: MEMORY.md
.amberclaw_old/utils/: helpers.py
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  skill_request.yml
.github/workflows/: ci.yml  docker-publish.yml  docs.yml  load-test.yml  publish-ghcr.yml  publish-pypi.yml  secret-scan.yml  security.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  bug_report.md  tracker.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-unification-completion/: 01-01-PLAN.md
.planning/phases/08-protocol-upgrades-discovery/: PLAN.md
.planning/phases/2-memory-rag/: 2-PLAN.md  2-SUMMARY.md
amberclaw/: __init__.py  cli.py
amberclaw/agent/: a2a.py  context.py  graph.py  loop.py  memory.py  skills.py  subagent.py
amberclaw/agent/memory/: knowledge.py
amberclaw/agent/tools/: __init__.py  a2a.py  base.py  council.py  cron.py  data_clean.py  data_eda.py  data_sql.py  data_viz.py  drive.py  filesystem.py  mcp.py  message.py  multimodal.py  mythos.py  personal_assistant.py  personal_rag.py  registry.py  shell.py  spawn.py  vemy_rag_tool.py  vemy_tool.py  vibeds_clean.py  vibeds_eda.py  vibeds_sql.py  vibeds_viz.py  web.py
amberclaw/bus/: __init__.py  queue.py
amberclaw/channels/: base.py  dingtalk.py  discord.py  email.py  feishu.py  manager.py  matrix.py  mochat.py  qq.py  slack.py  telegram.py  whatsapp.py
amberclaw/cli/: __init__.py  commands.py  doctor.py  vemy.py
amberclaw/config/: loader.py  paths.py  schema.py
amberclaw/cron/: __init__.py  heartbeat.py  service.py
amberclaw/data/: __init__.py  cli.py  orchestration.py
amberclaw/data/agents/: __init__.py  data_cleaning_agent.py  data_loader_tools_agent.py  data_visualization_agent.py  data_wrangling_agent.py  feature_engineering_agent.py  sql_database_agent.py  workflow_planner_agent.py
amberclaw/data/ds_agents/: __init__.py  eda_tools_agent.py
amberclaw/data/ml_agents/: __init__.py  h2o_ml_agent.py  mlflow_tools_agent.py  model_evaluation_agent.py
amberclaw/data/multiagents/: __init__.py  pandas_data_analyst.py  sql_data_analyst.py  supervisor_ds_team.py
amberclaw/data/parsers/: parsers.py
amberclaw/data/templates/: __init__.py  agent_templates.py
amberclaw/data/tools/: data_loader.py  dataframe.py  eda.py  h2o.py  mlflow.py  (+1 more)
amberclaw/heartbeat/: service.py
amberclaw/memory/: rag_pipeline.py
amberclaw/providers/: __init__.py  azure_openai_provider.py  base.py  custom_provider.py  factory.py  litellm_provider.py  ollama_provider.py  openai_codex_provider.py  registry.py
amberclaw/session/: manager.py
amberclaw/skills/: README.md
amberclaw/superpowers/: manager.py
amberclaw/templates/: AGENTS.md  HEARTBEAT.md  SOUL.md  USER.md
amberclaw/utils/: cost_tracker.py  helpers.py
amberclaw/vemy/: __init__.py
amberclaw/vibeds/: __init__.py  cli.py  orchestration.py
bridge/src/: index.ts  server.ts  whatsapp.ts
deploy/docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: LOCAL.md  api.md  architecture.md  comparisons.md  index.md  setup.md  skills.md  troubleshooting.md  windows-setup.md
examples/basic_agent/: README.md  main.py
examples/configs/: config.discord-local.json  config.telegram-claude.json  config.whatsapp-openai.json
examples/cron_task/: README.md  main.py
examples/custom_provider/: README.md  main.py
examples/custom_skill/: README.md  main.py
examples/docker_compose/: README.md  main.py
examples/hardware/: amber_node.ino
examples/heartbeat/: README.md  main.py
examples/mcp_filesystem/: README.md  main.py
examples/multi_agent/: README.md  main.py
examples/rag_pipeline/: README.md  main.py
examples/whatsapp/: README.md  main.py
scripts/: build_docs.py  eval_rag.py  line_count.sh  populate_inits.py  sandbox_debug.py  setup_rpi.sh
src/amberclaw/: __main__.py
tests/: conftest.py  test_azure_openai_provider.py  test_base_channel.py  test_cli_input.py  test_commands.py  test_consolidate_offset.py  test_context_prompt_cache.py  test_dingtalk_channel.py  test_email_channel.py  test_feishu_table_split.py  test_heartbeat_service.py  test_loop_save_turn.py  test_matrix_channel.py  test_mcp_tool.py  test_memory_consolidation_types.py  test_message_tool_suppress.py  test_prompt_regression.py  test_provider_retry.py  test_skill_creator_scripts.py  test_slack_channel.py  test_task_cancel.py  test_telegram_channel.py  test_tool_validation.py
tests/evals/: test_agent_eval.py
tests/integration/: test_docker.sh  test_integration_chat.py
tests/performance/: locustfile.py
tests/security/: test_audit.py  test_credentials.py  test_inference.py
tests/unit/: test_scratchpad.py
(+324 files in other folders)
