[project]
name = "amberclaw"
version = "2026.0.1"
description = "AmberClaw AI OS: Enterprise-grade personal AI assistant framework"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "AmberClaw Team", email = "dev@amberclaw.ai" }
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "textual>=0.50.0",
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "litellm>=1.28.0",
    "langchain>=0.1.0",
    "chromadb>=0.4.22",
    "sqlalchemy>=2.0.27",
    "aiosqlite>=0.19.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "opentelemetry-api>=1.23.0",
    "opentelemetry-sdk>=1.23.0",
    "opentelemetry-instrumentation-fastapi>=0.44b0",
    "prometheus-client>=0.19.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
    "loguru>=0.7.2",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "openpyxl>=3.1.0",
    "langgraph>=0.0.10",
    "ipython>=8.20.0",
    "mem0ai>=2.0.1",
    "python-telegram-bot>=22.7",
    "websockets>=16.0",
    "google-api-python-client>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "matrix-nio>=0.20.0",
    "json-repair>=0.30.0",
    "oauth-cli-kit>=0.1.0",
    "slackify-markdown>=0.1.0",
    "slack-sdk>=3.27.0",
    "h2o>=3.44.0",
    "pyserial>=3.5",
    "pillow>=10.2.0",
    "croniter>=2.0.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "paramiko>=3.4.0",
    "daytona>=0.184.0",
    "modal>=0.63.0",
]

[project.scripts]
amberclaw = "amberclaw.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amberclaw"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ASYNC", "S", "B", "A", "COM", "C4", "DTZ", "T20", "RET", "SIM", "ARG", "PTH", "ERA", "PL", "RUF"]
ignore = ["S101", "B008", "A003", "ASYNC109", "COM812", "E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "bandit>=1.7.7",
    "safety>=3.0.0",
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.15",
    "mkdocstrings[python]>=0.24.1",
    "hypothesis>=6.0.0",
    "nh3>=0.2.14",
    "mistune>=3.0.0",
    "ragas>=0.4.0",
    "datasets>=4.0.0"
]
